--- a/index.html
+++ b/index.html
@@ -14,7 +14,42 @@
 </head>
 
 <body>
-
+    <aside>
+        <img src="img/Logo.svg" alt="Logo do CodeConnect">
+        <nav>
+            <ul class="lista__link">
+                <li>
+                    <a href="#" class="link__destaque">
+                        Publicar
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="link__destaque">
+                        <img src="img/feed.svg">
+                        Feed
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="link__destaque">
+                        <img src="img/account_circle.svg">
+                        Perfil
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="link__destaque">
+                        <img src="img/info.svg">
+                        Sobre nós
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="link__destaque">
+                        <img src="img/logout.svg">
+                        Sair
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </aside>
     <script src="script.js"></script>
 </body>
 
