--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="link__destaque">
+                    <a href="#">
                         <img src="img/feed.svg">
                         Feed
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="link__destaque">
+                    <a href="#">
                         <img src="img/account_circle.svg">
                         Perfil
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="link__destaque">
+                    <a href="#">
                         <img src="img/info.svg">
                         Sobre nós
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="link__destaque">
+                    <a href="#">
                         <img src="img/logout.svg">
                         Sair
                     </a>
@@ -50,6 +50,45 @@
             </ul>
         </nav>
     </aside>
+
+    <main class="container__upload__imagem">
+        <div class="container__imagem">
+            <img src="img/imagem1.png" alt="" class="main__imagem">
+        </div>
+        <button>Carregar imagem</button>
+        <div class="container__imagem__nome">
+            <p>image_projeto.png</p>
+            <img src="img/close.svg" alt="Fechar">
+        </div>
+        <div class="container__descricao">
+            <h2>Novo Projeto</h2>
+            <form>
+                <div>
+                    <label for="nome">Nome do Projeto</label>
+                    <input type="text" id="nome" name="nome"></input>
+                </div>
+                <div>
+                    <label for="descricao">Descrição</label>
+                    <textarea type="text" id="descricao" name="descricao"></textarea>
+                </div>
+                <div>
+                    <label for="tag">Tags</label>
+                    <input type="text" id="categoria" name="tag"></input>
+                </div>
+                <ul class="lista__tags">
+                    <li>
+                        <p>Front-end</p>
+                        <img src="img/close-black.svg" >
+                    </li>
+                </ul>
+                <div class="container__botoes">
+                    <button class="botao__descartar">Descartar</button>
+                    <button class="botao__publicar">Publicar</button>
+                </div>
+            </form>
+        </div>
+    </main>
+
     <script src="script.js"></script>
 </body>
 
