feat: estilização do botão de descartar e publicar

--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
                 </div>
                 <ul class="lista__tags">
                     <li>
-                        <p>Front-end</p>
-                        <img src="img/close-black.svg">
+                        <p >
+                            Front-end
+                            <img src="img/close-black.svg">
+                        </p>
                     </li>
                 </ul>
                 <div class="container__botoes">
