feat: css do botao de anexar arquivo

--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
         </nav>
     </aside>
 
-    <main class="container__upload__imagem">
-        <div class="container__imagem">
-            <img src="img/imagem1.png" alt="" class="main__imagem">
+    <main>
+        <div class="container__upload__imagem">
+            <div class="container__imagem">
+                <img src="img/imagem1.png" class="main__imagem">
+            </div>
+            <button>Carregar imagem</button>
             <div class="container__imagem__nome">
-                <button>Carregar imagem</button>
                 <p>image_projeto.png</p>
                 <img src="img/close.svg" alt="Fechar">
             </div>
@@ -70,7 +72,7 @@
                 </div>
                 <div>
                     <label for="descricao">Descrição</label>
-                    <textarea type="text" id="descricao" name="descricao"></textarea>
+                    <textarea id="descricao" name="descricao"></textarea>
                 </div>
                 <div>
                     <label for="tag">Tags</label>
@@ -78,7 +80,7 @@
                 </div>
                 <ul class="lista__tags">
                     <li>
-                        <p >
+                        <p>
                             Front-end
                             <img src="img/close-black.svg">
                         </p>
