feat: lógica para a leitura do arquivo

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             <div class="container__imagem">
                 <img src="img/imagem1.png" class="main__imagem">
             </div>
-            <button>Carregar imagem</button>
+            <button id="upload__btn">Carregar imagem</button>
+            <input type="file" id="imagem__upload" accept="image/png, image/jpeg" style="display: none" />
             <div class="container__imagem__nome">
                 <p>image_projeto.png</p>
                 <img src="img/close.svg" alt="Fechar">
@@ -94,7 +95,7 @@
         </div>
     </main>
 
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
