feat: lógica JS que permite visualizar previa e altera o nome do arquivo

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <img src="img/imagem1.png" class="main__imagem">
             </div>
             <button id="upload__btn">Carregar imagem</button>
-            <input type="file" id="imagem__upload" accept="image/png, image/jpeg" style="display: none" />
+            <input type="file" id="imagem__upload" accept="image/" style="display: none" />
             <div class="container__imagem__nome">
                 <p>image_projeto.png</p>
                 <img src="img/close.svg" alt="Fechar">
