feat: lógica para conseguir adicionar novas tags

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                 </div>
                 <div>
                     <label for="tag">Tags</label>
-                    <input type="text" id="categoria" name="tag"></input>
+                    <input type="text" id="input__tag" name="tag"></input>
                 </div>
-                <ul class="lista__tags">
+                <ul class="lista__tags" id="lista__tags">
                     <li>
                         <p>
                             Front-end
